apps/staging/plex/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-public
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: plex
  hostnames:
    - plex.staging.myrobertson.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          port: 32400
